# gha-matrix-scout

./: .gitignore  CHANGELOG.md  CLEAN_ROOM_BRIEF.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README-ja.md  README-jp.md  README-zh.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
src/gha_matrix_scout/: __init__.py  __main__.py  cli.py  matrix.py  parser.py  reporter.py
tests/: test_matrix_expansion.py  test_workflow_and_cli.py
