[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "gha-matrix-scout"
version = "0.1.0"
description = "Preview static GitHub Actions matrix combinations from a local workflow file."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "gha-matrix-scout contributors" }]
keywords = ["github-actions", "ci", "matrix", "yaml"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Quality Assurance",
]
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["build>=1.2", "pytest>=8.0", "ruff>=0.5"]

[project.scripts]
gha-matrix-scout = "gha_matrix_scout.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
